# mysqldump-mutator-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  parser.rs  tokenizer.rs
src/ast/: data_type.rs  ddl.rs  mod.rs  operator.rs  query.rs  value.rs
src/dialect/: keywords.rs  mod.rs
tests/: migration_example.sql
