[package]
name = "mysqldump-mutator"
description = "MySQL mysqldump stream processor / mutator in Rust"
version = "0.0.1"
authors = ["David Bonet <webbonet@gmail.com>"]
homepage = "https://github.com/Couragium/mysqldump-mutator-rs"
keywords = [ "mysql", "mysqldump", "backup", "mutate", "anonymize" ]
repository = "https://github.com/Couragium/mysqldump-mutator-rs"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2018"

[lib]
name = "mysqldump_mutator"
path = "src/lib.rs"

[dependencies]
bigdecimal = { version = "0.1.0", optional = true }
log = "0.4.8"
utf8-chars = "0.1.2"

[dev-dependencies]
simple_logger = "1.5.0"
matches = "0.1.8"
